Creating booking hotel, airplane, combo page